criei código ex005

--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primeiros passos com o DOM</title>
+    <style>
+        body {
+            background-color: rgba(0, 66, 151, 0.788);
+            font-size: 1.2em;
+            font-family: Arial, Helvetica, sans-serif;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Iniciando estudos com DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <p>Aprendendo a usar o DOM em JavaScript</p>
+    <div>Clique em mim</div>
+    <script>
+
+    </script>
 </body>
 </html>
