--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -18,9 +18,11 @@
     <h1>Iniciando estudos com DOM</h1>
     <p>Aqui vai o resultado</p>
     <p>Aprendendo a usar o DOM em JavaScript</p>
-    <div>Clique em mim</div>
+    <div id="msg">Clique em mim</div>
     <script>
-
+        var p1 = window.document.getElementsByTagName('p')[0]
+        var d = window.document.getElementById('msg')
+        window.document.write(p1.innerText)
     </script>
 </body>
 </html>
