--- a/aula06/ex005.html
+++ b/aula06/ex005.html
@@ -22,6 +22,7 @@
     <script>
         var p1 = window.document.getElementsByTagName('p')[0]
         var d = window.document.getElementById('msg')
+        var corpo = window.document.body
         window.document.write(p1.innerText)
     </script>
 </body>
