criação exercícios aula 11

--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -30,7 +30,7 @@
             var n1 = Number(tn1.value)
             var n2 = Number(tn2.value)
             var s = n1 + n2
-            res.innerText = s
+            res.innerText = `O resultado de ${n1} mais ${n2} é igual a ${s}`
         }
     </script>
 </body>
