--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -18,7 +18,11 @@
             var txtv = window.document.getElementById('txtvel')
             var res = window.document.getElementById('res')
             var vel = Number('txtv.value')
-            res.innerHTML = `Sua velociade é de ${vel}`
+            res.innerHTML = `Sua velocidade atual é ${vel} `
+            if (vel > 60) {
+                res.innerText += '<p>Você foi MULTADO por excesso de velocidade</p>'
+            }
+            res.innerText += 'Use o cinto de segurança'
         }
     </script>
 </body>
