upload fotos 12ex

--- a/aula12ex/modelo.html
+++ b/aula12ex/modelo.html
@@ -16,7 +16,7 @@
             Aqui aparece a mensagem...
         </div>
         <div id="foto">
-            <img id="imagem" src="foto.png" alt="Foto">
+            <img id="imagem" src="fotomanha.png" alt="Foto">
         </div>
     </section>
     <footer>
