complemento aula14ex

--- a/aula14ex/modelo.html
+++ b/aula14ex/modelo.html
@@ -12,11 +12,11 @@
         <h1>Contador</h1>
     </header>
    <section>
-    <div>
-        <p>Início:<input type="number" name="begin" id="begin"></p>
-        <p>Fim:<input type="number" name="end" id="end"></p>
-        <p>Passo:<input type="number" name="salto" id="salto"></p>
-        <input type="button" value="Contar" onclick="contagem()">
+    <div id="dados">
+        <p>Início:<input type="number" name="begin" id="txtb"></p>
+        <p>Fim:<input type="number" name="end" id="txte"></p>
+        <p>Passo:<input type="number" name="salto" id="txts"></p>
+        <p><input type="button" value="Contar" onclick="contar()"></p>
     </div>
     <div id="res">
         <p>Aguardando...</p>
